AX: VoiceOver iframe scrolling focus jumping bug https://bugs.webkit.org/show_bug.cgi?id=176615 <rdar://problem/34333067>

Reviewed by Chris Fleizach.

Source/WebCore:

Scrolling to make elements visible is not working correctly for elements inside an
offscreen iframe. Fixed it by using RenderLayer::scrollRectToVisible() to handle
scrolling more properly.

Test: accessibility/scroll-to-make-visible-iframe-offscreen.html

* accessibility/AccessibilityObject.cpp:
(WebCore::AccessibilityObject::scrollToMakeVisible const):

LayoutTests:

* accessibility/resources/iframe.html: Added.
* accessibility/scroll-to-make-visible-iframe-offscreen-expected.txt: Added.
* accessibility/scroll-to-make-visible-iframe-offscreen.html: Added.
* platform/win/TestExpectations:


Canonical link: https://commits.webkit.org/200984@main
git-svn-id: https://svn.webkit.org/repository/webkit/trunk@231628 268f45cc-cd09-0410-ab3c-d52691b4dbfc